Chess Club/src/objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Current__c</fullName>
        <formula>Subscription__r.Current__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_Factor__c</fullName>
        <label>Fee Factor</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>Text(Player__r.Gender__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Up__c</fullName>
        <formula>Subscription__r.Paid_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Player_Name__c</fullName>
        <formula>Player__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player Registration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Player__c.Person_ID_del__r.Id</field>
                <operation>notEqual</operation>
                <value>&quot;&quot;</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subscription__c.Current__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year_Player_Membership__c</fullName>
        <label>Year Player Membership</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Player__c</columns>
        <columns>Player_Name__c</columns>
        <columns>Current__c</columns>
        <columns>Paid_Up__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MP-{0}</displayFormat>
        <label>Membership#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>